# JOTA

./: .env  Case - Dev Backend (Wendrew Oliveira).docx  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
config/: celery.py
jota/: asgi.py  celery.py  permissions.py  settings.py  urls.py  wsgi.py
news/: models.py  serializers.py  signals.py  tasks.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_status.py  0003_news_category.py  0004_news_plan.py
news/tests/: test_views.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_subscriptionplan.py  0003_alter_subscriptionplan_plan_name.py  0004_user_is_reader_user_is_writer_user_plan.py  0005_alter_user_is_staff.py  0006_remove_user_plan_user_plan_name_and_more.py
users/tests/: test_views.py
