[project]
name = "jota"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "celery>=5.5.2",
    "django>=5.2.1",
    "django-celery-beat>=2.8.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "httpx>=0.28.1",
    "ipython>=9.2.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "redis>=6.1.0",
    "requests>=2.32.3",
]
